--- a/gmall-pms/pom.xml
+++ b/gmall-pms/pom.xml
@@ -20,6 +20,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.5.0</version>
+        </dependency>
 
         <dependency>
             <groupId>com.atguigu</groupId>
