--- a/gmall-gateway/src/main/resources/application.yml
+++ b/gmall-gateway/src/main/resources/application.yml
@@ -4,27 +4,27 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: localhost:8848
     gateway:
       routes:
-        - id: pms-route # 商品管理路由
+        - id: pms-route
           uri: lb://pms-service
           predicates:
             - Path=/pms/**
-        - id: oms-route # 订单管理路由
-          uri: lb://oms-service
-          predicates:
-            - Path=/oms/**
-        - id: ums-route # 用户管理路由
-          uri: lb://ums-service
-          predicates:
-            - Path=/ums/**
-        - id: wms-route # 仓库管理路由
-          uri: lb://wms-service
-          predicates:
-            - Path=/wms/**
-        - id: sms-route # 营销管理路由
+        - id: sms-route
           uri: lb://sms-service
           predicates:
             - Path=/sms/**
+        - id: ums-route
+          uri: lb://ums-service
+          predicates:
+            - Path=/ums/**
+        - id: oms-route
+          uri: lb://oms-service
+          predicates:
+            - Path=/oms/**
+        - id: wms-route
+          uri: lb://wms-service
+          predicates:
+            - Path=/wms/**
 
